# open-banking-lakehouse

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: casting.sql
dbt/macros/tests/: unique_combo.sql
dbt/models/: schema.yml  sources.yml
dbt/models/gold/: mart_provider_coverage.sql  mart_rate_changes.sql
dbt/models/silver/: dim_products.sql  fct_product_fees.sql  fct_product_rates.sql
dbt/models/staging/: stg_fees_raw.sql  stg_products_raw.sql  stg_rate_tiers_raw.sql  stg_rates_raw.sql
src/cdr_pipeline/: __main__.py  bootstrap.py  config.py  db.py  drift.py  http_client.py  ingest.py  qa.py  report.py
tests/: test_config.py  test_ingest_smoke.py  test_qa.py
